Update Content/Favicon/Removed Font Awesome Icons

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -1,5 +1,5 @@
 ---
-title: "home"
+title: "The Apps:"
 bg: white
 color: black
 style: center
@@ -9,7 +9,7 @@ style: center
 {: .text-purple}
 
 
-###Listen:
+### Listen:
 
 When it comes to money, every little bit counts. Every penny you save today could help improve your life tomorrow. It all adds up in the long run, right?
 
