--- a/_posts/2000-01-03-Fiverr.md
+++ b/_posts/2000-01-03-Fiverr.md
@@ -2,9 +2,9 @@
 title: "Fiverr"
 bg: orange
 color: black
-fa-icon: toggle-on
 ---
-Fiverr
+## Fiverr
+
 Fiverr is a freelancing database that connects people in need of specific services with people who specialize in these various areas. Fiverr is great for picking up quick and easy jobs that have no strings attached in exchange for a quick five bucks.
 While there is a wide variety of services offered on Fiverr, the most popular categories are writing, graphic design, audio/visual work, programming, and marketing. There’s also a “fun and bizarre” category, where people offer others money to do things like play pranks on friends or complete daredevil stunts.
 
