--- a/_posts/2000-01-05-Ibotta.md
+++ b/_posts/2000-01-05-Ibotta.md
@@ -1,63 +1,17 @@
 ---
-title: "usage"
+title: "Ibotta"
 bg: '#63BD2F'
 color: white
-fa-icon: plug
 ---
 
-Alright, you've got a clean copy and are ready to push some schmancy pages for the world to ogle at.
+## Ibotta
 
-- Edit `_config.yml` to change your title, keywords, and description.
-- Create a new file in `_posts/` called `2014-01-01-intro.md`
-  Edit it, and add:
+Ibotta earns you cash rebates whenever you make a purchase at your local grocery store. You simply take a picture of your receipt and upload it through the app, and your Ibotta account will be credited accordingly. 
 
-{% highlight text linenos=table %}
----
-title: "home"
-bg: white     #defined in _config.yml, can use html color like '#010101'
-color: black  #text color
-style: center
----
+Though not every item you purchase will go toward the rebate, many store brand items (and some national brands) are part of the deal. Using Ibotta will almost certainly net you hundreds of dollars over the course of a year. You can also join “teams” and earn more after you and your teammates reach certain purchasing milestones. 
 
-# Example headline!
-and so on..
-{% endhighlight %}
+Ibotta partners with over 180 stores throughout the country, so you likely won’t have any trouble earning rebates while shopping at the grocery store you’ve always shopped at.
 
-- Create a second post called `2014-01-02-art.md` with an divider image this time:
+Ibotta offers a variety of methods for cashing out your earnings. You can receive actual money via Venmo or PayPal, or elect to be sent gift cards for various retailers.
 
-{% highlight text linenos=table %}
----
-title: "Art"
-bg: turquoise  #defined in _config.yml, can use html color like '#0fbfcf'
-color: white   #text color
-fa-icon: paint-brush
----
-
-#### A new section- oh the humanity!
-{% endhighlight %}
-
-**Note:** That part `fa-icon: paint-brush` will use a font-awesome icon of [paint-brush](http://fortawesome.github.io/Font-Awesome/icon/paint-brush/). You can use any icon from this [font-awesome icon directory](http://fortawesome.github.io/Font-Awesome/icons/).
-
-- install Jekyll with `sudo gem install github-pages`
-- run `jekyll serve -w`
-  - visit [localhost:4000](http://localhost:4000) to see a live locally served preview.
-- Push changes and see them live!
-
-
-
-
-## **Changing your colors**
-{: style="margin-top:100px;"}
-
-- In each post file you can define `bg: mycolor` and `color: myothercolor` to change the background and text colors for that section.
-- **mycolor** can be a quoted html color like `'#0fbfcf'` or a key to a special color defined in **_config.yml** under 'colors'.
-  - **Note:** Changes to _config.yml require a manual restart to your local server with `^C` and `jekyll serve -w`.
-
-Nifty, right!
-
-
-
-### Also see **README.md** [*on github!*](https://github.com/t413/SinglePaged#usage)
-{: style="margin-top:100px;"}
-
-
+In exchange for the rebates, you’ll have to deal with ads while using Ibotta. Probably nothing you’re not used to thanks to YouTube and popups, but just a little fair warning.
