--- a/_posts/2000-01-06-Shopkick.md
+++ b/_posts/2000-01-06-Shopkick.md
@@ -1,20 +1,21 @@
 ---
-title: "updating"
+title: "Shopkick"
 bg: purple
 color: white
-fa-icon: cloud-upload
 ---
 
-## Updating
+## Shopkick
 
-So you've got a copy running and there's some new update? Let's update!
+Shopkick is similar to Ibotta, but it focuses specifically on department stores. 
 
-1. Checkout your github-pages branch
-  - `git checkout gh-pages` for a standalone or existing page
-  - `git checkout master` for a *username.github.io* page
-2. run `git remote | grep -q "singlepage" || git remote add -t publish singlepage https://github.com/t413/SinglePaged.git` to be sure you have access to this repository (you can run this command at any time).
-2. `git fetch singlepage` to fetch-in-place new changes.
-3. Update to the new base (using merge)
-    1. `git merge singlepage/publish`
-4. You can alternatively update using rebase. This *rewrites history* (**bad**), but it is cleaner.
-    1. `git rebase singlepage/publish`
+With Shopkick, you earn reward points simply for going to a store and checking in, scanning items (before purchasing them), purchasing them with a credit card you’ve connected to your Shopkick account, and scanning your receipts.
+
+Your rewards, or “kicks,” can then be redeemed for cold, hard cash.
+
+Shopkick works at many major retail and department stores, meaning anyone from sports enthusiasts to those interested in home decorating will find a use for the app.
+
+As mentioned, you don’t even need to buy anything when using Shopkick to rack up reward points. Of course, purchasing items will earn you much more than simply checking in to a store.
+
+While you eventually redeem your “kicks” for cash, you don’t earn money directly (as you do with Ibotta). Earning enough reward points to make a substantial amount of money will likely take some time.
+
+If you’re really into privacy, you’ll be unhappy to know that Shopkick requires that you let it see your location in order to verify that you’re actually at the store you’ve checked in to. You can still turn the service off when you’re not using it, though.
