Added image background in Intro section

--- a/_posts/2000-01-02-Smore.md
+++ b/_posts/2000-01-02-Smore.md
@@ -3,6 +3,15 @@ title: "S'more"
 bg: white
 color: black
 ---
+### Listen:
+
+When it comes to money, every little bit counts. Every penny you save today could help improve your life tomorrow. It all adds up in the long run, right?
+
+Knowing this, you should always be on the lookout for new ways to increase your income - even if only by a tiny bit.
+
+Using the following apps isn’t going to make you rich. But putting in the minimal effort that goes into utilizing each of them will leave you with a decent amount of cash at the end of the year. 
+
+Just don’t spend it all in one place. (Or, you know...do that. It’s your money, after all!)
 
 ## S’more
 If you’re a fan of making money for doing absolutely nothing, S’more is the app for you. 
