--- a/_posts/2000-01-02-Content.md
+++ b/_posts/2000-01-02-Content.md
@@ -13,21 +13,20 @@ Using the following apps isn’t going to make you rich. But putting in the mini
 
 Just don’t spend it all in one place. (Or, you know...do that. It’s your money, after all!)
 
-## S’more
-If you’re a fan of making money for doing absolutely nothing, S’more is the app for you. 
+## S’more App
+If you’re a fan of making money for doing absolutely nothing, [S’more](www.smoreapp.co) is the app for you. 
 
-With S’more, you collect reward points for allowing the app to show ads on your phone’s lock screen. Once you reach a certain amount of reward points, you can redeem them for gift cards at various retailers and online stores. The points are redeemed and the gift cards accessed through email, so the entire process is quick and easy.
+With S’more, you collect reward points for allowing the app to show ads on your phone’s lock screen. Once you reach a certain amount of reward points, you can redeem them for gift cards at various retailers and online stores. The points are redeemed and the gift cards sent via email, so the entire process is quick and easy.
 
 After installing and setting up S’more, you don’t have to do anything at all to start earning reward points. It’s also a good incentive to unglue your eyes from your phone, for a change.
 
 One of the usual concerns with this type of app is battery life. However, S’more’s developers have optimized the app to ensure it uses as little of your phone’s battery as possible. 
 
-Due to Apple regulations, S’more is currently available for Android devices, meaning iPhone users will have to figure out another way to earn passive income through their lock screen.
+Due to Apple regulations, S’more is currently available for Android devices, meaning iPhone users will have to find another way to earn passive income. 
 
 ## Fiverr
 
-Fiverr is a freelancing database that connects people in need of specific services with people who specialize in these various areas. Fiverr is great for picking up quick and easy jobs that have no strings attached in exchange for a quick five bucks.
-While there is a wide variety of services offered on Fiverr, the most popular categories are writing, graphic design, audio/visual work, programming, and marketing. There’s also a “fun and bizarre” category, where people offer others money to do things like play pranks on friends or complete daredevil stunts.
+[Fiverr](www.fiverr.com) is a freelancing database that connects people in need of specific services with people who specialize in these various areas. Fiverr is great for picking up quick and easy jobs that have no strings attached in exchange for a quick five bucks. While there is a wide variety of services offered on Fiverr, the most popular categories are writing, graphic design, audio/visual work, programming, and marketing. There’s also a “fun and bizarre” category, where people offer others money to do things like play [pranks](https://www.fiverr.com/gigs/pranks) on friends or complete daredevil stunts.
 
 The projects offered are usually not very involved, either. A talented individual could likely complete many of the tasks in 30 minutes or less. While this certainly isn’t enough to allow you to quit your dayjob, it’s a good way to make some side cash while doing what you love.
 First of all, there’s always something interesting being offered on Fiverr. You might not get paid a ton, but you can pick and choose the work you decide to take on.
@@ -40,15 +39,17 @@ Though it’s a good way to build your portfolio, you shouldn’t be making Five
 
 ## Ibotta
 
-Ibotta earns you cash rebates whenever you make a purchase at your local grocery store. You simply take a picture of your receipt and upload it through the app, and your Ibotta account will be credited accordingly. 
+[Ibotta](www.ibotta.com) helps you earn cash rebates whenever you make a purchase at your local grocery store. You simply take a picture of your receipt and upload it through the app, and your Ibotta account will be credited accordingly. 
 
-Though not every item you purchase will go toward the rebate, many store brand items (and some national brands) are part of the deal. Using Ibotta will almost certainly net you hundreds of dollars over the course of a year. You can also join “teams” and earn more after you and your teammates reach certain purchasing milestones. 
+Though not every item you purchase will go toward the rebate, many store brand items (and some national brands) are part of the deal. If you use Ibotta regularly, you will almost certainly net hundreds of dollars over the course of a year. You can also join “teams” and earn more after you and your teammates reach certain purchasing milestones. 
 
 Ibotta partners with over 180 stores throughout the country, so you likely won’t have any trouble earning rebates while shopping at the grocery store you’ve always shopped at.
 
-Ibotta offers a variety of methods for cashing out your earnings. You can receive actual money via Venmo or PayPal, or elect to be sent gift cards for various retailers.
+Ibotta offers a variety of methods for cashing out your earnings. You can receive actual money via [Venmo](venmo.com) or [PayPal](paypal.com), or elect to be sent gift cards for various retailers.
 
-In exchange for the rebates, you’ll have to deal with ads while using Ibotta. Probably nothing you’re not used to thanks to YouTube and popups, but just a little fair warning.
+On the downside, Ibotta is a bit labor intensive. If convenience is what you want, you may not have the patience to snap a photo of your receipt after every grocery visit. But if you're willing to put up with a little inconvenience, you can achieve great earnings. 
+
+In exchange for the rebates, you’ll have to deal with ads while using Ibotta. Probably nothing you’re not used to, but just a little fair warning.
 
 ## Shopkick
 
