--- a/_posts/2000-01-02-Content.md
+++ b/_posts/2000-01-02-Content.md
@@ -14,7 +14,7 @@ Using the following apps isn’t going to make you rich. But putting in the mini
 Just don’t spend it all in one place. (Or, you know...do that. It’s your money, after all!)
 
 ## S’more App
-If you’re a fan of making money for doing absolutely nothing, [S’more](https://www.smoreapp.co) is the app for you. 
+If you’re a fan of making money for doing absolutely nothing, [S’more](https://www.smoreapp.co) is the app for you.
 
 With S’more, you collect reward points for allowing the app to show ads on your phone’s lock screen. Once you reach a certain amount of reward points, you can redeem them for gift cards at various retailers and online stores. The points are redeemed and the gift cards sent via email, so the entire process is quick and easy.
 
@@ -26,7 +26,7 @@ Due to Apple regulations, S’more is currently available for Android devices, m
 
 ## Fiverr
 
-[Fiverr](https://www.fiverr.com) is a freelancing database that connects people in need of specific services with people who specialize in these various areas. Fiverr is great for picking up quick and easy jobs that have no strings attached in exchange for a quick five bucks. While there is a wide variety of services offered on Fiverr, the most popular categories are writing, graphic design, audio/visual work, programming, and marketing. There’s also a “fun and bizarre” category, where people offer others money to do things like play [pranks](https://www.fiverr.com/gigs/pranks) on friends or complete daredevil stunts.
+[Fiverr](https://www.fiverr.com){: rel="nofollow"} is a freelancing database that connects people in need of specific services with people who specialize in these various areas. Fiverr is great for picking up quick and easy jobs that have no strings attached in exchange for a quick five bucks. While there is a wide variety of services offered on Fiverr, the most popular categories are writing, graphic design, audio/visual work, programming, and marketing. There’s also a “fun and bizarre” category, where people offer others money to do things like play [pranks](https://www.fiverr.com/gigs/pranks){: rel="nofollow"} on friends or complete daredevil stunts.
 
 The projects offered are usually not very involved, either. A talented individual could likely complete many of the tasks in 30 minutes or less. While this certainly isn’t enough to allow you to quit your dayjob, it’s a good way to make some side cash while doing what you love.
 First of all, there’s always something interesting being offered on Fiverr. You might not get paid a ton, but you can pick and choose the work you decide to take on.
@@ -39,13 +39,13 @@ Though it’s a good way to build your portfolio, you shouldn’t be making Five
 
 ## Ibotta
 
-[Ibotta](https://www.ibotta.com) helps you earn cash rebates whenever you make a purchase at your local grocery store. You simply take a picture of your receipt and upload it through the app, and your Ibotta account will be credited accordingly. 
+[Ibotta](https://www.ibotta.com){: rel="nofollow"} helps you earn cash rebates whenever you make a purchase at your local grocery store. You simply take a picture of your receipt and upload it through the app, and your Ibotta account will be credited accordingly. 
 
 Though not every item you purchase will go toward the rebate, many store brand items (and some national brands) are part of the deal. If you use Ibotta regularly, you will almost certainly net hundreds of dollars over the course of a year. You can also join “teams” and earn more after you and your teammates reach certain purchasing milestones. 
 
 Ibotta partners with over 180 stores throughout the country, so you likely won’t have any trouble earning rebates while shopping at the grocery store you’ve always shopped at.
 
-Ibotta offers a variety of methods for cashing out your earnings. You can receive actual money via [Venmo](https://www.venmo.com) or [PayPal](https://www.paypal.com), or elect to be sent gift cards for various retailers.
+Ibotta offers a variety of methods for cashing out your earnings. You can receive actual money via [Venmo](https://www.venmo.com){: rel="nofollow"} or [PayPal](https://www.paypal.com){: rel="nofollow"}, or elect to be sent gift cards for various retailers.
 
 On the downside, Ibotta is a bit labor intensive. If convenience is what you want, you may not have the patience to snap a photo of your receipt after every grocery visit. But if you're willing to put up with a little inconvenience, you can achieve great earnings. 
 
@@ -53,7 +53,7 @@ In exchange for the rebates, you’ll have to deal with ads while using Ibotta. 
 
 ## Shopkick
 
-Shopkick is similar to Ibotta, but it focuses specifically on department stores. 
+[Shopkick](https://www.shopkick.com){: rel="nofollow"} is similar to Ibotta, but it focuses specifically on department stores. 
 
 With Shopkick, you earn reward points simply for going to a store and checking in, scanning items (before purchasing them), purchasing them with a credit card you’ve connected to your Shopkick account, and scanning your receipts.
 
